--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools">
+<manifest xmlns:android="http://schemas.android.com/apk/res/android">
 
     <application
         android:allowBackup="true"
@@ -25,7 +24,7 @@
             android:exported="false" />
         <activity
             android:name=".ABLogicaCadastro"
-            android:exported="true"/>
+            android:exported="true" />
         <activity
             android:name=".AALogicaLogin"
             android:exported="true">
