--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,6 +11,9 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.QuickDealApp">
         <activity
+            android:name=".BDLogicaFavorito"
+            android:exported="false" />
+        <activity
             android:name=".BCLogicaRestaurantes"
             android:exported="false" />
         <activity
